
New Features in tasksh 1.3.0

  - 

New commands in tasksh 1.3.0

  - 

New configuration options in tasksh 1.3.0

  - 

Known Issues

  - 

Tasksh has been built and tested on the following configurations:

  * macOS
  * Fedora
  * Ubuntu
  * Debian
  * Arch
  * FreeBSD
  * Cygwin

---

While Tasksh has undergone testing, bugs are sure to remain.  If you
encounter a bug, please enter a new issue at:

  http://bug.tasktools.org

Or just send a message to:

  support@taskwarrior.org

Thank you.