@@ -28,6 +28,8 @@
 #include <vector>
 #include <string>
 #include <Color.h>
+#include <Lexer.h>
+#include <shared.h>
 
 static std::vector <std::string> contextColors = {
   "bold white on red",
@@ -93,11 +95,36 @@ std::string promptCompose ()
   // TODO - The accumulated context, as colored tokens.
   // TODO - sync status
   // TODO - time
+  std::string prompt = "tasksh";
   auto decoration = composeContexts (true);
   if (decoration.length ())
     return "task " + decoration + "> ";
 
-  return "tasksh> ";
+  std::string dummy;;
+  std::string output;
+
+  bool hideContextPrompt = false;
+  execute ("task", {"_get", "rc.tasksh.contextprompt"}, dummy, output);
+  output = lowerCase (output);
+
+  hideContextPrompt = (output == "no\n"   ||
+		       output == "n\n"     ||
+		       output == "false\n" ||
+		       output == "0\n"     ||
+		       output == "off\n");
+
+  if (!hideContextPrompt)
+  {
+    execute ("task", {"_get", "rc.context"}, dummy, output);
+    output = Lexer::trimRight (output, "\n");
+
+    if (output != "")
+      prompt += " (" + output + ")";
+  }
+
+  prompt += "> ";
+
+  return prompt;
 }
 
 ////////////////////////////////////////////////////////////////////////////////
